mhdl/y.output

state 0
	$accept: .start $end 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_MODEL  shift 9
	L_OPERATOR  shift 51
	L_PACKAGE  shift 8
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	start  goto 1
	package  goto 2
	model  goto 3
	expr  goto 4
	simple_name  goto 45
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	model_head  goto 6
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	package_head  goto 5
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 1
	$accept:  start.$end 
	start:  start.package 
	start:  start.model 

	$end  accept
	L_MODEL  shift 9
	L_PACKAGE  shift 8
	.  error

	package  goto 55
	model  goto 56
	model_head  goto 6
	package_head  goto 5

state 2
	start:  package.    (3)

	.  reduce 3 (src line 58)


state 3
	start:  model.    (4)

	.  reduce 4 (src line 59)


state 4
	start:  expr.    (5)

	.  reduce 5 (src line 60)


state 5
	package:  package_head.package_library package_inclusion package_models package_tail ; 
	empty: .    (394)

	L_LIBRARIES  shift 60
	.  reduce 394 (src line 1169)

	empty  goto 59
	libraries  goto 58
	package_library  goto 57

state 6
	model:  model_head.model_library model_inclusions model_body model_tail ; 
	empty: .    (394)

	L_LIBRARIES  shift 60
	.  reduce 394 (src line 1169)

	empty  goto 63
	libraries  goto 62
	model_library  goto 61

7: shift/reduce conflict (shift 52(0), red'n 130(0)) on L_DOUBLE
7: shift/reduce conflict (shift 51(0), red'n 130(0)) on L_OPERATOR
7: shift/reduce conflict (shift 43(5), red'n 130(0)) on ^
7: shift/reduce conflict (shift 66(0), red'n 130(0)) on \'
7: shift/reduce conflict (shift 41(0), red'n 130(0)) on /
7: shift/reduce conflict (shift 42(0), red'n 130(0)) on *
7: shift/reduce conflict (shift 44(0), red'n 130(0)) on -
state 7
	expr:  prefix_expr.    (130)
	expr:  prefix_expr.op expr 
	physical_value:  prefix_expr.designation 

	L_DOUBLE  shift 52
	L_OPERATOR  shift 51
	^  shift 43
	\'  shift 66
	/  shift 41
	*  shift 42
	-  shift 44
	.  reduce 130 (src line 424)

	designation  goto 65
	op  goto 64
	operator  goto 40

state 8
	package_head:  L_PACKAGE.simple_name 

	L_IDENTIFIER  shift 68
	(  shift 69
	.  error

	simple_name  goto 67

state 9
	model_head:  L_MODEL.simple_name 

	L_IDENTIFIER  shift 68
	(  shift 69
	.  error

	simple_name  goto 70

state 10
	prefix_expr:  case_expr.    (255)

	.  reduce 255 (src line 788)


state 11
	prefix_expr:  cond_expr.    (256)

	.  reduce 256 (src line 790)


state 12
	prefix_expr:  derivative.    (257)

	.  reduce 257 (src line 792)


state 13
	prefix_expr:  function_apply.    (258)

	.  reduce 258 (src line 794)


state 14
	prefix_expr:  integral.    (259)

	.  reduce 259 (src line 796)


state 15
	prefix_expr:  lambda_abstract.    (260)

	.  reduce 260 (src line 798)


state 16
	prefix_expr:  let_expr.    (261)

	.  reduce 261 (src line 800)


state 17
	prefix_expr:  operator_apply.    (262)

	.  reduce 262 (src line 802)


state 18
	prefix_expr:  physical_value.    (263)

	.  reduce 263 (src line 804)


state 19
	prefix_expr:  primitive_value.    (264)

	.  reduce 264 (src line 806)


20: shift/reduce conflict (shift 71(0), red'n 265(0)) on (
state 20
	function_apply:  simple_pattern_expr.( function_args ) 
	prefix_expr:  simple_pattern_expr.    (265)

	(  shift 71
	.  reduce 265 (src line 808)


state 21
	prefix_expr:  struct_func_create.    (266)

	.  reduce 266 (src line 810)


state 22
	prefix_expr:  typed_expr.    (267)

	.  reduce 267 (src line 812)


state 23
	case_expr:  L_CASE.expr L_OF { alternatives } 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 72
	simple_name  goto 45
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 24
	cond_expr:  L_IF.expr L_THEN expr L_ELSE expr 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 73
	simple_name  goto 45
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 25
	derivative:  L_DERIVATIVE.( L_IDENTIFIER ) ( expr ) 

	(  shift 74
	.  error


state 26
	integral:  L_INTEGRAL.( L_IDENTIFIER ) integral_expr ( expr ) 

	(  shift 75
	.  error


state 27
	lambda_abstract:  \\.( patterns ) L_RARROW expr 

	(  shift 76
	.  error


state 28
	let_expr:  L_LET.nested_defs L_IN expr 

	{  shift 78
	.  error

	nested_defs  goto 77

state 29
	operator_apply:  op.expr 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 79
	simple_name  goto 45
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 30
	primitive_value:  L_PRIMITIVE.expr 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 80
	simple_name  goto 45
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 31
	simple_pattern_expr:  name.    (286)
	variable:  name.    (384)

	@  reduce 384 (src line 1141)
	.  reduce 286 (src line 868)


state 32
	simple_pattern_expr:  variable.@ simple_pattern_expr 

	@  shift 81
	.  error


state 33
	simple_pattern_expr:  ~.simple_pattern_expr 

	L_CHAR  shift 49
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_INTEGER  shift 47
	L_STRING  shift 50
	~  shift 33
	(  shift 83
	_  shift 34
	[  shift 38
	.  error

	simple_name  goto 45
	name  goto 31
	simple_pattern_expr  goto 82
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	selected_names  goto 54
	variable  goto 32

state 34
	simple_pattern_expr:  _.    (289)

	.  reduce 289 (src line 876)


state 35
	simple_pattern_expr:  literal.    (290)

	.  reduce 290 (src line 878)


state 36
	simple_pattern_expr:  null.    (291)

	.  reduce 291 (src line 880)


state 37
	null:  (.) 
	property_names:  (.exprs ) 
	property_names:  (.expr ) 
	simple_name:  (.op ) 
	simple_pattern_expr:  (.expr ) 
	simple_pattern_expr:  (.exprs ) 
	simple_pattern_expr:  (.pattern patterns ) 
	typed_expr:  (.expr L_COLONS type_spec where_context ) 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	)  shift 84
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 86
	simple_name  goto 45
	pattern  goto 88
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 87
	exprs  goto 85
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 38
	simple_pattern_expr:  [.list ] 
	empty: .    (394)

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  reduce 394 (src line 1169)

	expr  goto 91
	simple_name  goto 45
	name  goto 31
	case_expr  goto 10
	empty  goto 90
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	exprs  goto 92
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	list  goto 89
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 39
	struct_func_create:  property_names.L_LTEQEQ name property_names 

	L_LTEQEQ  shift 93
	.  error


state 40
	op:  operator.    (233)

	.  reduce 233 (src line 719)


state 41
	op:  /.    (234)

	.  reduce 234 (src line 721)


state 42
	op:  *.    (235)

	.  reduce 235 (src line 726)


state 43
	op:  ^.    (236)

	.  reduce 236 (src line 731)


state 44
	op:  -.    (237)

	.  reduce 237 (src line 736)


state 45
	name:  simple_name.    (220)

	.  reduce 220 (src line 678)


state 46
	name:  selected_name.    (221)

	.  reduce 221 (src line 680)


state 47
	literal:  L_INTEGER.    (193)

	.  reduce 193 (src line 601)


state 48
	literal:  L_FLOAT.    (194)

	.  reduce 194 (src line 605)


state 49
	literal:  L_CHAR.    (195)

	.  reduce 195 (src line 609)


state 50
	literal:  L_STRING.    (196)

	.  reduce 196 (src line 613)


state 51
	operator:  L_OPERATOR.    (238)

	.  reduce 238 (src line 742)


state 52
	operator:  L_DOUBLE.name L_DOUBLE 

	L_IDENTIFIER  shift 53
	(  shift 69
	.  error

	simple_name  goto 45
	name  goto 94
	selected_name  goto 46
	selected_names  goto 54

state 53
	selected_names:  L_IDENTIFIER.    (283)
	simple_name:  L_IDENTIFIER.    (284)

	.  reduce 283 (src line 856)
	.  reduce 284 (src line 861)


state 54
	selected_name:  selected_names.. simple_name 
	selected_names:  selected_names.. L_IDENTIFIER 

	.  shift 95
	.  error


state 55
	start:  start package.    (1)

	.  reduce 1 (src line 56)


state 56
	start:  start model.    (2)

	.  reduce 2 (src line 57)


state 57
	package:  package_head package_library.package_inclusion package_models package_tail ; 
	empty: .    (394)

	L_INCLUDES  shift 99
	.  reduce 394 (src line 1169)

	empty  goto 98
	inclusions  goto 97
	package_inclusion  goto 96

state 58
	package_library:  libraries.    (247)

	.  reduce 247 (src line 770)


state 59
	package_library:  empty.    (248)

	.  reduce 248 (src line 771)


state 60
	libraries:  L_LIBRARIES.library_names ; 

	L_IDENTIFIER  shift 68
	(  shift 69
	.  error

	simple_name  goto 101
	library_names  goto 100

state 61
	model:  model_head model_library.model_inclusions model_body model_tail ; 
	empty: .    (394)

	L_INCLUDES  shift 99
	.  reduce 394 (src line 1169)

	empty  goto 104
	inclusions  goto 103
	model_inclusions  goto 102

state 62
	model_library:  libraries.    (203)

	.  reduce 203 (src line 636)


state 63
	model_library:  empty.    (204)

	.  reduce 204 (src line 637)


state 64
	expr:  prefix_expr op.expr 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 105
	simple_name  goto 45
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 65
	physical_value:  prefix_expr designation.    (254)

	.  reduce 254 (src line 786)


state 66
	designation:  \'.designation_indicators \' 

	L_IDENTIFIER  shift 53
	(  shift 108
	.  error

	simple_name  goto 45
	name  goto 111
	designation_indicators  goto 106
	indicators  goto 107
	indicator_list  goto 109
	indicator  goto 110
	selected_name  goto 46
	selected_names  goto 54

state 67
	package_head:  L_PACKAGE simple_name.    (242)

	.  reduce 242 (src line 759)


state 68
	simple_name:  L_IDENTIFIER.    (284)

	.  reduce 284 (src line 861)


state 69
	simple_name:  (.op ) 

	L_DOUBLE  shift 52
	L_OPERATOR  shift 51
	^  shift 43
	/  shift 41
	*  shift 42
	-  shift 44
	.  error

	op  goto 112
	operator  goto 40

state 70
	model_head:  L_MODEL simple_name.    (198)

	.  reduce 198 (src line 625)


state 71
	function_apply:  simple_pattern_expr (.function_args ) 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 114
	simple_name  goto 45
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	exprs  goto 115
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	function_args  goto 113
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 72
	case_expr:  L_CASE expr.L_OF { alternatives } 

	L_OF  shift 116
	.  error


state 73
	cond_expr:  L_IF expr.L_THEN expr L_ELSE expr 

	L_THEN  shift 117
	.  error


state 74
	derivative:  L_DERIVATIVE (.L_IDENTIFIER ) ( expr ) 

	L_IDENTIFIER  shift 118
	.  error


state 75
	integral:  L_INTEGRAL (.L_IDENTIFIER ) integral_expr ( expr ) 

	L_IDENTIFIER  shift 119
	.  error


state 76
	lambda_abstract:  \\ (.patterns ) L_RARROW expr 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 122
	simple_name  goto 45
	pattern  goto 121
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	patterns  goto 120
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 77
	let_expr:  L_LET nested_defs.L_IN expr 

	L_IN  shift 123
	.  error


state 78
	nested_defs:  {.nested_def_list } 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_COERCION  shift 128
	L_DEFAULT  shift 132
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 135
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 134
	simple_name  goto 45
	name  goto 136
	case_expr  goto 10
	cond_expr  goto 11
	label  goto 131
	value_def  goto 127
	derivative  goto 12
	op  goto 29
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	name_def  goto 126
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	named_values  goto 129
	names  goto 133
	nested_def  goto 125
	nested_def_list  goto 124
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32
	value_def_target  goto 130

state 79
	operator_apply:  op expr.    (240)

	.  reduce 240 (src line 749)


state 80
	primitive_value:  L_PRIMITIVE expr.    (268)

	.  reduce 268 (src line 815)


state 81
	simple_pattern_expr:  variable @.simple_pattern_expr 

	L_CHAR  shift 49
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_INTEGER  shift 47
	L_STRING  shift 50
	~  shift 33
	(  shift 83
	_  shift 34
	[  shift 38
	.  error

	simple_name  goto 45
	name  goto 31
	simple_pattern_expr  goto 137
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	selected_names  goto 54
	variable  goto 32

state 82
	simple_pattern_expr:  ~ simple_pattern_expr.    (288)

	.  reduce 288 (src line 874)


state 83
	null:  (.) 
	simple_name:  (.op ) 
	simple_pattern_expr:  (.expr ) 
	simple_pattern_expr:  (.exprs ) 
	simple_pattern_expr:  (.pattern patterns ) 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	)  shift 84
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 138
	simple_name  goto 45
	pattern  goto 88
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 87
	exprs  goto 139
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 84
	null:  ( ).    (232)

	.  reduce 232 (src line 716)


state 85
	exprs:  exprs., expr 
	property_names:  ( exprs.) 
	simple_pattern_expr:  ( exprs.) 

	,  shift 140
	)  shift 141
	.  error


state 86
	exprs:  expr., expr 
	pattern:  expr.    (251)
	property_names:  ( expr.) 
	simple_pattern_expr:  ( expr.) 
	typed_expr:  ( expr.L_COLONS type_spec where_context ) 

	L_COLONS  shift 144
	,  shift 142
	)  shift 143
	.  reduce 251 (src line 778)


state 87
	operator_apply:  op.expr 
	simple_name:  ( op.) 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	)  shift 145
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 79
	simple_name  goto 45
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 88
	simple_pattern_expr:  ( pattern.patterns ) 

	L_CASE  shift 23
	L_CHAR  shift 49
	L_DERIVATIVE  shift 25
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_IDENTIFIER  shift 53
	L_IF  shift 24
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_STRING  shift 50
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  error

	expr  goto 122
	simple_name  goto 45
	pattern  goto 121
	name  goto 31
	case_expr  goto 10
	cond_expr  goto 11
	derivative  goto 12
	op  goto 29
	prefix_expr  goto 7
	function_apply  goto 13
	simple_pattern_expr  goto 20
	integral  goto 14
	lambda_abstract  goto 15
	patterns  goto 146
	let_expr  goto 16
	literal  goto 35
	selected_name  goto 46
	null  goto 36
	operator  goto 40
	operator_apply  goto 17
	physical_value  goto 18
	primitive_value  goto 19
	struct_func_create  goto 21
	typed_expr  goto 22
	property_names  goto 39
	selected_names  goto 54
	variable  goto 32

state 89
	simple_pattern_expr:  [ list.] 

	]  shift 147
	.  error


state 90
	list:  empty.    (186)

	.  reduce 186 (src line 586)


state 91
	exprs:  expr., expr 
	list:  expr.    (187)
	list:  expr.| qualifiers 
	list:  expr.L_DOTS expr 
	list:  expr., expr L_DOTS 
	list:  expr.L_DOTS 

	L_DOTS  shift 150
	|  shift 149
	,  shift 148
	.  reduce 187 (src line 588)


state 92
	exprs:  exprs., expr 
	list:  exprs.    (188)

	,  shift 140
	.  reduce 188 (src line 590)


state 93
	struct_func_create:  property_names L_LTEQEQ.name property_names 

	L_IDENTIFIER  shift 53
	(  shift 69
	.  error

	simple_name  goto 45
	name  goto 151
	selected_name  goto 46
	selected_names  goto 54

state 94
	operator:  L_DOUBLE name.L_DOUBLE 

	L_DOUBLE  shift 152
	.  error


state 95
	selected_name:  selected_names ..simple_name 
	selected_names:  selected_names ..L_IDENTIFIER 

	L_IDENTIFIER  shift 154
	(  shift 69
	.  error

	simple_name  goto 153

state 96
	package:  package_head package_library package_inclusion.package_models package_tail ; 
	empty: .    (394)

	L_ASSOCIATE  shift 188
	L_ATTRIBUTE  shift 198
	L_CASE  shift 23
	L_CHAR  shift 49
	L_CLASS  shift 185
	L_COERCION  shift 128
	L_CONFIGURATION  shift 189
	L_CONNECT  shift 191
	L_CONSTRAINT  shift 192
	L_DEFAULT  shift 132
	L_DERIVATIVE  shift 25
	L_DIMENSION  shift 168
	L_DOUBLE  shift 52
	L_FLOAT  shift 48
	L_FOR  shift 205
	L_IDENTIFIER  shift 135
	L_IF  shift 204
	L_INSTANCE  shift 186
	L_INTEGER  shift 47
	L_INTEGRAL  shift 26
	L_LET  shift 28
	L_MULTIPLIER  shift 170
	L_OPERATOR  shift 51
	L_PRIMITIVE  shift 30
	L_SIGNAL  shift 199
	L_STRING  shift 50
	L_STRUCTURE  shift 196
	L_TABLE  shift 203
	L_TYPE  shift 197
	L_UNIT  shift 184
	^  shift 43
	~  shift 33
	(  shift 37
	/  shift 41
	*  shift 42
	\\  shift 27
	-  shift 44
	_  shift 34
	[  shift 38
	.  reduce 394 (src line 1169)
